--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Snake</title>
@@ -6,7 +6,14 @@
   </head>
   <body>
     <h1>Snake</h1>
-    <table id="game"></table>
+
+    <div class="board">
+      <div class="overlay">
+        <button class="btn" onClick="start()">Start</button>
+      </div>
+
+      <table id="game"></table>
+    </div>
 
     <script src="script.js"></script>
   </body>
