--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <div class="board">
       <div id="start" class="overlay">
+        <h2>Ready?</h2>
         <button class="btn" onClick="start()">Start</button>
       </div>
       <div id="restart" class="overlay overlay--hide">
