feat: optimized generating food location & add win condition

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <h2>Game over</h2>
         <button class="btn" onClick="start()">Try again</button>
       </div>
+      <div id="win" class="overlay overlay--hide">
+        <h2>Congrats! You won</h2>
+        <button class="btn" onClick="start()">Go for another round</button>
+      </div>
 
       <table id="game"></table>
       <p>score: <strong id="score">0</strong></p>
