fix: remove focus from ongame btns

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <div class="board">
       <div class="controls">
         <div class="controls__wrapper">
-          <button onClick="moveDirection('U')">up</button>
-          <button onClick="moveDirection('R')">right</button>
-          <button onClick="moveDirection('L')">down</button>
-          <button onClick="moveDirection('D')">left</button>
+          <button tabindex="-1" onClick="moveDirection('U')">up</button>
+          <button tabindex="-1" onClick="moveDirection('R')">right</button>
+          <button tabindex="-1" onClick="moveDirection('L')">down</button>
+          <button tabindex="-1" onClick="moveDirection('D')">left</button>
         </div>
       </div>
 
